--- a/Project-4-Wrangle-and-Analyze-Data/wrangle_act.ipynb
+++ b/Project-4-Wrangle-and-Analyze-Data/wrangle_act.ipynb
@@ -386,10 +386,10 @@
    "outputs": [],
    "source": [
     "# Connecting to Twitter using Tweepy.\n",
-    "consumer_key = '7JOlWGhmhoRl6aMBxLqbNCSr0'\n",
-    "consumer_secret = '8eaWjgnVj6GpMUSK4LTp2n2srvy9z9NNW2OR3gpVI46CSYapIT'\n",
-    "access_token = '738076331045359616-NVGnI8dF6tE6te84Dcj9OSht80C322v'\n",
-    "access_secret = 'ZssZpCiTgbFQZyCuaIx4rOTS9u2mAlAkr89YtcM6KfGfu'\n",
+    "consumer_key = #\n",
+    "consumer_secret = #\n",
+    "access_token = #\n",
+    "access_secret = #\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_secret)\n",
